--- a/share/playbooks/roles/create_webfront_ami/templates/webfront-cloud-init-script.j2
+++ b/share/playbooks/roles/create_webfront_ami/templates/webfront-cloud-init-script.j2
@@ -27,11 +27,10 @@ shopt -s nullglob
 packages=$(echo "*.tar.gz *.tar.bz2")
 if [ "X$packages" != "X" ] ; then
     for package in ${packages} ; do
+        dirname=${package%%.*}
+        siteTop="$rootDir/$dirname"
         [[ $package == *.tar.gz ]] && /usr/bin/tar zxf $package
         [[ $package == *.tar.bz2 ]] && /usr/bin/tar jxf $package
-    done
-    for dirname in $(find . -mindepth 1 -maxdepth 1 -type d | sed -e "s|^\./||") ; do
-        siteTop="$rootDir/$dirname"
         $VIRTUALENV_RUN ${siteTop}
         echo "installTop=$siteTop" > $dirname/dws.mk
         echo "srcTop=$siteTop/reps" >> $dirname/dws.mk
@@ -44,33 +43,45 @@ if [ "X$packages" != "X" ] ; then
         popd
         /usr/bin/chown -R djaoapp:djaoapp "$dirname"
     done
-    siteTop=${rootDir}/djaoapp
-    if [ -d ${siteTop} ] ; then
-        # Install djagent
-        cd ${siteTop}/reps/djagent
-        ../../bin/dws --default make install
-        echo "SETTINGS_LOCATION=" > ${siteTop}/etc/sysconfig/djagent
-        echo "SETTINGS_CRYPT_KEY=" >> ${siteTop}/etc/sysconfig/djagent
-        echo "QUEUE_URL=" >> ${siteTop}/etc/sysconfig/djagent
-        chmod 600 ${siteTop}/etc/sysconfig/djagent
-        chown djaoapp:djaoapp ${siteTop}/etc/sysconfig/djagent
-        cp ${siteTop}/etc/systemd/system/djagent.service /usr/lib/systemd/system
-        ../../bin/dws --default make install-selinux
+else
+    # defaults to downloading drop so we can install the webfront.xml profile.
+    siteTop="$rootDir"
+    mkdir -p ${siteTop}/reps
+    $VIRTUALENV_RUN ${siteTop}
+    git clone {{remote_drop_repo}} ${siteTop}/reps/drop
+fi
 
-        # Configure djaoapp
-        echo "SETTINGS_LOCATION=" > ${siteTop}/etc/sysconfig/djaoapp
-        echo "SETTINGS_CRYPT_KEY=" >> ${siteTop}/etc/sysconfig/djaoapp
-        chmod 600 ${siteTop}/etc/sysconfig/djaoapp
-        chown djaoapp:djaoapp ${siteTop}/etc/sysconfig/djaoapp
-        cp ${siteTop}/etc/systemd/system/djaoapp.service /usr/lib/systemd/system
+cd $siteTop
+bin/python reps/drop/src/dservices.py -DetcDir=/etc -DldapHost=dbs.{{tag_prefix}}ec2.internal -DcompanyDomain={{company_domain}} -DwwwDomainName={{www_domain_name}} reps/drop/share/profiles/webfront.xml
 
-        # Rewrite nginx config file to avoid redirects loops because no https
-        [ ! -f /etc/nginx/conf.d/djaoapp.com.conf ] || rm -f /etc/nginx/conf.d/djaoapp.com.conf
-        cp /usr/share/nginx/html/404.html /usr/share/nginx/html/50x.html ${siteTop}/reps/djaoapp/htdocs
-        restorecon -rvF  ${siteTop}/reps/djaoapp/htdocs
-        cp /etc/nginx/nginx.conf /etc/nginx/nginx.conf~
-        head -n 37 /etc/nginx/nginx.conf~ > /etc/nginx/nginx.conf
-        cat << EOF >> /etc/nginx/nginx.conf
+# Extra configuation to start up djagent and djaoapp
+siteTop=${rootDir}/djaoapp
+if [ -d ${siteTop} ] ; then
+    # Install djagent
+    cd ${siteTop}/reps/djagent
+    ../../bin/dws --default make install
+    echo "SETTINGS_LOCATION=" > ${siteTop}/etc/sysconfig/djagent
+    echo "SETTINGS_CRYPT_KEY=" >> ${siteTop}/etc/sysconfig/djagent
+    echo "QUEUE_URL=" >> ${siteTop}/etc/sysconfig/djagent
+    chmod 600 ${siteTop}/etc/sysconfig/djagent
+    chown djaoapp:djaoapp ${siteTop}/etc/sysconfig/djagent
+    cp ${siteTop}/etc/systemd/system/djagent.service /usr/lib/systemd/system
+    ../../bin/dws --default make install-selinux
+
+    # Configure djaoapp
+    echo "SETTINGS_LOCATION=" > ${siteTop}/etc/sysconfig/djaoapp
+    echo "SETTINGS_CRYPT_KEY=" >> ${siteTop}/etc/sysconfig/djaoapp
+    chmod 600 ${siteTop}/etc/sysconfig/djaoapp
+    chown djaoapp:djaoapp ${siteTop}/etc/sysconfig/djaoapp
+    cp ${siteTop}/etc/systemd/system/djaoapp.service /usr/lib/systemd/system
+
+    # Rewrite nginx config file to avoid redirects loops because no https
+    [ ! -f /etc/nginx/conf.d/djaoapp.com.conf ] || rm -f /etc/nginx/conf.d/djaoapp.com.conf
+    cp /usr/share/nginx/html/404.html /usr/share/nginx/html/50x.html ${siteTop}/reps/djaoapp/htdocs
+    restorecon -rvF  ${siteTop}/reps/djaoapp/htdocs
+    cp /etc/nginx/nginx.conf /etc/nginx/nginx.conf~
+    head -n 37 /etc/nginx/nginx.conf~ > /etc/nginx/nginx.conf
+    cat << EOF >> /etc/nginx/nginx.conf
     upstream proxy_djaoapp {
         server  127.0.0.1:8000;
     }
@@ -90,22 +101,12 @@ if [ "X$packages" != "X" ] ; then
             include       /etc/nginx/proxy_params;
         }
 EOF
-        tail -42 /etc/nginx/nginx.conf~ >> /etc/nginx/nginx.conf
-        /usr/bin/systemctl enable djagent
-        /usr/bin/systemctl enable djaoapp
-        /usr/bin/systemctl start djagent
-        /usr/bin/systemctl start djaoapp
-    fi
-else
-    # defaults to downloading drop so we can install the webfront.xml profile.
-    siteTop="$rootDir"
-    mkdir -p ${siteTop}/reps
-    $VIRTUALENV_RUN ${siteTop}
-    git clone {{remote_drop_repo}} ${siteTop}/reps/drop
+    tail -42 /etc/nginx/nginx.conf~ >> /etc/nginx/nginx.conf
+    /usr/bin/systemctl enable djagent
+    /usr/bin/systemctl enable djaoapp
+    /usr/bin/systemctl start djagent
+    /usr/bin/systemctl start djaoapp
 fi
-
-cd $siteTop
-bin/python reps/drop/src/dservices.py -DetcDir=/etc -DldapHost=dbs.{{tag_prefix}}ec2.internal -DcompanyDomain={{company_domain}} -DwwwDomainName={{www_domain_name}} reps/drop/share/profiles/webfront.xml
 
 
 # Ansible will be waiting for this server to respond
