--- a/share/playbooks/roles/create_webfront_ami/templates/webfront-cloud-init-script.j2
+++ b/share/playbooks/roles/create_webfront_ami/templates/webfront-cloud-init-script.j2
@@ -16,9 +16,10 @@ else
     # Without making the fast cache, python36 is sometimes not found on mirror
     # (ex: mirrors.cat.pdx.edu)
     /usr/bin/yum makecache fast
+    /usr/bin/yum -y libselinux-python
     /usr/bin/yum -y install python36 python36-libs python36-devel python36-pip
     /usr/bin/yum -y install awscli bzip2 make python-virtualenv
-    VIRTUALENV_RUN="/usr/bin/virtualenv -p python36 --system-site-packages"
+    VIRTUALENV_RUN="/usr/bin/virtualenv -p python3.6 --system-site-packages"
 fi
 
 # Download and install packages that require authentication credentials
